# wspython

./: .dockerignore  .editorconfig  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
tests/: test_helloworld.py
wspython/: __init__.py  routes.py
wspython/core/: __init__.py  app.py  databases.py  exceptions.py  handler.py  route.py
wspython/database/: connection.py
wspython/handlers/: hello_world.py
