[tool.poetry]
name = "wspython"
version = "0.1.0"
description = "Base para web services escritos em Python"
authors = ["Ricardo Gomes <desk467@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.0.4"
websockets = "^8.1"
aioredis = "^1.3.1"
hiredis = "^1.0.1"
marshmallow = "^3.6.0"
autopep8 = "^1.5.2"
databases = {extras = ["postgresql"], version = "^0.4.0"}
orjson = "^3.2.1"
pytest = "^6.1.2"
uvicorn = {extras = ["standard"], version = "^0.12.2"}

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
rope = "^0.17.0"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
